# hypergen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: eval_geometry.py  eval_latent.py  plot_pq_ablation.py  plot_results.py  plot_tnbbeta_sphere.py  train_cifar100.py
scripts/: eval_all.sh  eval_geometry.sh  plot_all.sh  sweep_qmax.sh  train_all.sh  train_circle.sh
src/hypergen/: __init__.py
src/hypergen/baselines/: __init__.py  gaussian_vae.py  power_spherical_vae.py  vmf_vae.py
src/hypergen/distributions/: __init__.py  spherical.py  tnbbeta.py
src/hypergen/metrics/: __init__.py  isotropy.py  probes.py
src/hypergen/models/: __init__.py  decoder.py  encoder.py  vae.py
tests/: test_metrics.py  test_spherical_lift.py  test_tnbbeta.py  test_vae.py
